[refactor] 전체 디렉토리 정리

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ subprojects {
 	if (project.path in [
 			':eureka-server',
 			':gateway',
-			':auth',
+			':services:auth',
 			':services:user',
 			':services:order',
 			':services:payment',
