--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -7,17 +7,17 @@ services:
       dockerfile: Dockerfile
     image: ticketping/eureka-server
 
-  auth-server:
-    build:
-      context: ./auth
-      dockerfile: Dockerfile
-    image: ticketping/auth-server
-
   gateway-server:
     build:
       context: ./gateway
       dockerfile: Dockerfile
     image: ticketping/gateway-server
+
+  auth-server:
+    build:
+      context: ./services/auth
+      dockerfile: Dockerfile
+    image: ticketping/auth-server
 
   user-server:
     build:
