--- a/services/auth/build.gradle
+++ b/services/auth/build.gradle
@@ -34,8 +34,8 @@ dependencyManagement {
 }
 
 dependencies {
-	implementation project(':common')
-	implementation project(':dtos:user-dto')
+	implementation project(':common:mvc')
+	implementation project(':common:dtos:user-dto')
 
 	// JWT
 	compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
