--- a/services/queue-manage/src/main/resources/application-local.yaml
+++ b/services/queue-manage/src/main/resources/application-local.yaml
@@ -3,11 +3,11 @@ spring:
     name: queue-manage
 
   redis:
-    host: redis
+    host: localhost
     port: 6379
 
   kafka:
-    bootstrap-servers: kafka:29092
+    bootstrap-servers: localhost:9092
     consumer:
       group-id: ${spring.application.name}-group
       auto-offset-reset: earliest
@@ -25,7 +25,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka-server:10000/eureka/
+      defaultZone: http://localhost:10000/eureka/
 
 token-value:
   secret-key: secret-key
