--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'ticketPing'
 
 include ("eureka-server")
 include("gateway")
+include("api-server")
 
 include ("common:mvc")
 include ("common:webflux")
