[feat #4] docker file gateway api-server로 수정

--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -7,11 +7,11 @@ services:
       dockerfile: Dockerfile
     image: ticketping/eureka-server
 
-  gateway-server:
+  api-server:
     build:
-      context: ./gateway
+      context: ./api-server
       dockerfile: Dockerfile
-    image: ticketping/gateway-server
+    image: ticketping/api-server
 
   auth-server:
     build:
