--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include("api-server")
 include ("common:mvc")
 include ("common:webflux")
 include ("common:jpa")
+include ("common:events")
 include ("common:dtos:user-dto")
 include ("common:dtos:order-dto")
 include ("common:dtos:payment-dto")
