--- a/services/queue-manage/build.gradle
+++ b/services/queue-manage/build.gradle
@@ -24,36 +24,43 @@ ext {
 
 dependencies {
 	implementation project(':common:webflux')
+	implementation project(':common:events')
 
-	// spring cloud
+	// Cloud
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
-	// webflux
+	// WebFlux
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
 	// redisson
 	implementation 'org.redisson:redisson-spring-boot-starter:3.33.0'
 
-	// kafka
+	// Kafka
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'io.projectreactor.kafka:reactor-kafka:1.3.22'
 
+	// Swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.0.2'
-	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
-  
+
 	// Monitoring
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
+	// Test
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'io.projectreactor:reactor-test:3.4.10'
+	testImplementation 'org.springframework.kafka:spring-kafka-test:2.8.0'
+
+	// Gatling
+	testImplementation 'io.gatling.highcharts:gatling-charts-highcharts:3.12.0'
+	testImplementation 'io.gatling:gatling-test-framework:3.12.0'
+
+	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-	testImplementation 'io.gatling.highcharts:gatling-charts-highcharts:3.12.0'
-	testImplementation 'io.gatling:gatling-test-framework:3.12.0'
 }
 
 dependencyManagement {
