[refactor] 패키지 정리

--- a/services/queue-manage/src/main/resources/application.yml
+++ b/services/queue-manage/src/main/resources/application.yml
@@ -2,9 +2,10 @@ spring:
   application:
     name: queue-manage
 
-  redis:
-    host: redis
-    port: 6379
+  data:
+    redis:
+      host: redis
+      port: 6379
 
   kafka:
     bootstrap-servers: kafka:29092
