--- a/services/queue-manage/build.gradle
+++ b/services/queue-manage/build.gradle
@@ -23,6 +23,7 @@ ext {
 }
 
 dependencies {
+	// Common Module
 	implementation project(':common:webflux')
 	implementation project(':common:events')
 
@@ -33,7 +34,7 @@ dependencies {
 	// WebFlux
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
-	// redisson
+	// Redisson
 	implementation 'org.redisson:redisson-spring-boot-starter:3.33.0'
 
 	// Kafka
@@ -47,6 +48,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
+	// Lombok
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	// Valid
+	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+
 	// Test
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -56,11 +64,6 @@ dependencies {
 	// Gatling
 	testImplementation 'io.gatling.highcharts:gatling-charts-highcharts:3.12.0'
 	testImplementation 'io.gatling:gatling-test-framework:3.12.0'
-
-	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	annotationProcessor 'org.projectlombok:lombok'
 }
 
 dependencyManagement {
