--- a/services/queue-manage/src/main/resources/application-local.yaml
+++ b/services/queue-manage/src/main/resources/application-local.yaml
@@ -2,9 +2,10 @@ spring:
   application:
     name: queue-manage
 
-  redis:
-    host: localhost
-    port: 6379
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
   kafka:
     bootstrap-servers: localhost:9092
