[feat #3] redis cluster 적용하기

--- a/services/queue-manage/src/main/resources/application.yml
+++ b/services/queue-manage/src/main/resources/application.yml
@@ -4,8 +4,14 @@ spring:
 
   data:
     redis:
-      host: redis
-      port: 6379
+      cluster:
+        nodes:
+          - host.docker.internal:7001
+          - host.docker.internal:7002
+          - host.docker.internal:7003
+          - host.docker.internal:7004
+          - host.docker.internal:7005
+          - host.docker.internal:7006
 
   kafka:
     bootstrap-servers: kafka:29092
