--- a/services/queue-manage/src/main/resources/application-local.yaml
+++ b/services/queue-manage/src/main/resources/application-local.yaml
@@ -4,8 +4,14 @@ spring:
 
   data:
     redis:
-      host: localhost
-      port: 6379
+      cluster:
+        nodes:
+          - localhost:7001
+          - localhost:7002
+          - localhost:7003
+          - localhost:7004
+          - localhost:7005
+          - localhost:7006
 
   kafka:
     bootstrap-servers: localhost:9092
@@ -27,7 +33,7 @@ token-value:
 
 working-queue:
   max-size: 1000
-  token-ttl: 30
+  token-ttl: 1
 
 management:
   endpoints:
