--- a/services/order/build.gradle
+++ b/services/order/build.gradle
@@ -39,11 +39,7 @@ dependencies {
 	implementation project(':common:jpa')
 	implementation project(':common:messaging')
 
-	// redisson
-	implementation 'org.redisson:redisson-spring-boot-starter:3.33.0'
-
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
-
+	// redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	// kafka
@@ -54,14 +50,7 @@ dependencies {
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'org.postgresql:postgresql'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
