[feat #14] 결제 완료 이벤트 구현

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -210,6 +210,8 @@ services:
         condition: service_healthy
       eureka-server:
         condition: service_started
+      kafka:
+        condition: service_healthy
 
   queue-manage-server:
     container_name: queue-manage-server
