--- a/common/caching/build.gradle
+++ b/common/caching/build.gradle
@@ -26,13 +26,16 @@ repositories {
 bootJar {
 	enabled = false
 }
+
 jar {
 	enabled = true
 }
 
-
 dependencies {
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
 
+	// Redis
+	api 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
