--- a/common/messaging/build.gradle
+++ b/common/messaging/build.gradle
@@ -26,13 +26,15 @@ repositories {
 bootJar {
 	enabled = false
 }
+
 jar {
 	enabled = true
 }
 
-
 dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
+
+	// Kafka
 	api 'org.springframework.kafka:spring-kafka'
 }
 
