--- a/services/queue-manage/src/main/resources/application.yml
+++ b/services/queue-manage/src/main/resources/application.yml
@@ -2,19 +2,9 @@ spring:
   application:
     name: queue-manage
 
-  data:
-    redis:
-      cluster:
-        nodes:
-          - host.docker.internal:7001
-          - host.docker.internal:7002
-          - host.docker.internal:7003
-          - host.docker.internal:7004
-          - host.docker.internal:7005
-          - host.docker.internal:7006
-
   config:
     import:
+      - "classpath:application-redis.yml"
       - "classpath:application-kafka.yml"
 
 server:
