--- a/services/auth/src/main/resources/application.yml
+++ b/services/auth/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
   application:
     name: auth
-  data:
-    redis:
-      host: redis
-      port: 6379
+
+  config:
+    import:
+      - "classpath:application-redis.yml"
 
 server:
   port: 10010
