--- a/services/order/build.gradle
+++ b/services/order/build.gradle
@@ -37,23 +37,22 @@ dependencies {
 	implementation project(':common:core')
 	implementation project(':common:dtos')
 	implementation project(':common:jpa')
+	implementation project(':common:caching')
 	implementation project(':common:messaging')
 
-	// redis
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	// MVC
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	// kafka
-	implementation 'org.springframework.kafka:spring-kafka'
+	// Cloud
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+	// Swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
 	// Monitoring
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
     runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
-
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
-	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-
 }
 
 tasks.named('test') {
