--- a/services/order/src/main/resources/application.yml
+++ b/services/order/src/main/resources/application.yml
@@ -11,11 +11,8 @@ spring:
   config:
     import:
       - "classpath:application-jpa.yml"
+      - "classpath:application-redis.yml"
       - "classpath:application-kafka.yml"
-
-redis:
-  host: redis
-  port: 6379
 
 server:
   port: 10023
