--- a/services/performance/build.gradle
+++ b/services/performance/build.gradle
@@ -34,19 +34,24 @@ dependencyManagement {
 }
 
 dependencies {
+	// Common Module
 	implementation project(':common:core')
-	implementation project(':common:jpa')
 	implementation project(':common:dtos')
+	implementation project(':common:jpa')
+	implementation project(':common:caching')
+
+	// MVC
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// Cloud
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+	// Swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 
 	// Monitoring
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
-
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
-	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
