--- a/docker-compose-build.yml
+++ b/docker-compose-build.yml
@@ -7,11 +7,11 @@ services:
       dockerfile: Dockerfile
     image: ticketping/eureka-server
 
-  api-server:
+  gateway-server:
     build:
-      context: ./api-server
+      context: ./gateway
       dockerfile: Dockerfile
-    image: ticketping/api-server
+    image: ticketping/gateway-server
 
   auth-server:
     build:
