--- a/docker-compose-monitoring.yml
+++ b/docker-compose-monitoring.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
     networks:
@@ -19,7 +19,7 @@ services:
     ports:
       - "3100:3100"
     volumes:
-      - ./loki/loki-config.yml:/etc/loki/local-config.yml
+      - ./monitoring/loki/loki-config.yml:/etc/loki/local-config.yml
     command:
       - '-config.file=/etc/loki/local-config.yml'
     networks:
@@ -36,7 +36,7 @@ services:
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_DISCORD_WEBHOOK_URL=${GF_DISCORD_WEBHOOK_URL}
     volumes:
-      - ./grafana/provisioning/:/etc/grafana/provisioning/
+      - ./monitoring/grafana/provisioning/:/etc/grafana/provisioning/
     depends_on:
       - prometheus
       - loki
