--- a/services/user/src/main/resources/application.yml
+++ b/services/user/src/main/resources/application.yml
@@ -11,23 +11,10 @@ spring:
     jpa: com.ticketPing.performance.domain.entity
 
   config:
-    import: "classpath:application-jpa.yml"
+    import:
+      - "classpath:application-eureka.yml"
+      - "classpath:application-jpa.yml"
+      - "classpath:application-monitoring.yml"
 
 server:
   port: 10011
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://eureka-server:10000/eureka/
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
-  endpoint:
-    health:
-      show-details: always
-  prometheus:
-    enabled: true
