--- a/services/auth/build.gradle
+++ b/services/auth/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	implementation project(':common:core')
 	implementation project(':common:dtos')
 	implementation project(':common:caching')
+	implementation project(':common:monitoring')
 
 	// MVC
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -56,11 +57,6 @@ dependencies {
 
 	// Swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
-
-	// Monitoring
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
-	implementation 'com.github.loki4j:loki-logback-appender:1.5.1'
 }
 
 tasks.named('test') {
