--- a/services/order/build.gradle
+++ b/services/order/build.gradle
@@ -34,11 +34,13 @@ dependencyManagement {
 }
 
 dependencies {
+	// Common Module
 	implementation project(':common:core')
 	implementation project(':common:dtos')
 	implementation project(':common:jpa')
 	implementation project(':common:caching')
 	implementation project(':common:messaging')
+	implementation project(':common:monitoring')
 
 	// MVC
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -49,10 +51,6 @@ dependencies {
 
 	// Swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
-
-	// Monitoring
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 }
 
 tasks.named('test') {
