--- a/services/payment/src/main/resources/application.yml
+++ b/services/payment/src/main/resources/application.yml
@@ -10,24 +10,10 @@ spring:
 
   config:
     import:
+      - "classpath:application-eureka.yml"
       - "classpath:application-jpa.yml"
       - "classpath:application-kafka.yml"
+      - "classpath:application-monitoring.yml"
 
 server:
   port: 10014
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://eureka-server:10000/eureka/
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
-  endpoint:
-    health:
-      show-details: always
-  prometheus:
-    enabled: true
