--- a/services/queue-manage/build.gradle
+++ b/services/queue-manage/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation project(':common:core')
 	implementation project(':common:caching')
 	implementation project(':common:messaging')
+	implementation project(':common:monitoring')
 
 	// WebFlux
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
