--- a/services/queue-manage/src/main/resources/application.yml
+++ b/services/queue-manage/src/main/resources/application.yml
@@ -4,27 +4,13 @@ spring:
 
   config:
     import:
+      - "classpath:application-eureka.yml"
       - "classpath:application-redis.yml"
       - "classpath:application-kafka.yml"
+      - "classpath:application-monitoring.yml"
 
 server:
   port: 10015
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://eureka-server:10000/eureka/
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
-  endpoint:
-    health:
-      show-details: always
-  prometheus:
-    enabled: true
 
 token-value:
   secret-key: secret-key
