--- a/services/user/build.gradle
+++ b/services/user/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	implementation project(':common:core')
 	implementation project(':common:dtos')
 	implementation project(':common:jpa')
+	implementation project(':common:monitoring')
 
 	// MVC
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -50,10 +51,6 @@ dependencies {
 
 	// Swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
-
-	// Monitoring
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 }
 
 tasks.named('test') {
