--- a/docker-compose-monitoring.yml
+++ b/docker-compose-monitoring.yml
@@ -43,6 +43,14 @@ services:
     networks:
       - monitoring
 
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin
+    ports:
+      - "9411:9411"
+    networks:
+      - monitoring
+
 networks:
   monitoring:
     driver: bridge
