--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -23,7 +23,9 @@ ext {
 
 dependencies {
 	// Common Module
+	implementation project(':common:core')
 	implementation project(':common:caching')
+	implementation project(':common:dtos')
 	implementation project(':common:monitoring')
 
 	// Cloud
