[feat #6] 로그인 시 refresh token 생성 추가

--- a/services/auth/src/main/resources/application.yml
+++ b/services/auth/src/main/resources/application.yml
@@ -13,3 +13,7 @@ server:
 
 jwt:
   secret: ${JWT_SECRET_KEY}
+  accessToken:
+    expiration: 600000  # 10분
+  refreshToken:
+    expiration: 604800000  # 7일
