[refactor] 전체 리팩토링

--- a/common/monitoring/build.gradle
+++ b/common/monitoring/build.gradle
@@ -40,9 +40,9 @@ dependencies {
 	api 'com.github.loki4j:loki-logback-appender:1.5.1'
 
 	// Zipkin
-	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
-	implementation 'io.github.openfeign:feign-micrometer'
-	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
+	api 'io.micrometer:micrometer-tracing-bridge-brave'
+	api 'io.github.openfeign:feign-micrometer'
+	api 'io.zipkin.reporter2:zipkin-reporter-brave'
 }
 
 tasks.named('test') {
