--- a/docker-compose/docker-compose-monitoring.yml
+++ b/docker-compose/docker-compose-monitoring.yml
@@ -7,11 +7,9 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ../monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
-    networks:
-      - monitoring
 
   loki:
     image: grafana/loki:latest
@@ -19,11 +17,9 @@ services:
     ports:
       - "3100:3100"
     volumes:
-      - ./monitoring/loki/loki-config.yml:/etc/loki/local-config.yml
+      - ../monitoring/loki/loki-config.yml:/etc/loki/local-config.yml
     command:
       - '-config.file=/etc/loki/local-config.yml'
-    networks:
-      - monitoring
 
   grafana:
     image: grafana/grafana
@@ -36,21 +32,13 @@ services:
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_DISCORD_WEBHOOK_URL=${GF_DISCORD_WEBHOOK_URL}
     volumes:
-      - ./monitoring/grafana/provisioning/:/etc/grafana/provisioning/
+      - ../monitoring/grafana/provisioning/:/etc/grafana/provisioning/
     depends_on:
       - prometheus
       - loki
-    networks:
-      - monitoring
 
   zipkin:
     image: openzipkin/zipkin
     container_name: zipkin
     ports:
       - "9411:9411"
-    networks:
-      - monitoring
-
-networks:
-  monitoring:
-    driver: bridge
