[refactor] 전체 코드 리팩토링

--- a/services/order/build.gradle
+++ b/services/order/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 	// Common Module
 	implementation project(':common:core')
 	implementation project(':common:dtos')
-	implementation project(':common:jpa')
+	implementation project(':common:rdb')
 	implementation project(':common:caching')
 	implementation project(':common:messaging')
 	implementation project(':common:monitoring')
