--- a/settings.gradle
+++ b/settings.gradle
@@ -5,7 +5,7 @@ include("gateway")
 
 include ("common:core")
 include ("common:dtos")
-include ("common:jpa")
+include ("common:rdb")
 include ("common:caching")
 include ("common:messaging")
 include ("common:monitoring")
