[feat #48] Kafka Consumer 설정

--- a/common/messaging/src/main/resources/application-kafka.yml
+++ b/common/messaging/src/main/resources/application-kafka.yml
@@ -5,3 +5,7 @@ spring:
       group-id: ${spring.application.name}-group
       properties:
         spring.json.trusted.packages: '*'
+
+logging:
+  level:
+    org.springframework.kafka.listener.KafkaMessageListenerContainer: OFF
