--- a/common/messaging/src/main/resources/application-kafka.yml
+++ b/common/messaging/src/main/resources/application-kafka.yml
@@ -1,6 +1,6 @@
 spring:
   kafka:
-    bootstrap-servers: kafka1:29092,kafka2:29093
+    bootstrap-servers: kafka1:29092,kafka2:29093,kafka3:29094
     consumer:
       group-id: ${spring.application.name}-group
       properties:
