--- a/services/auth/src/main/resources/application.yml
+++ b/services/auth/src/main/resources/application.yml
@@ -14,6 +14,6 @@ server:
 jwt:
   secret: ${JWT_SECRET_KEY}
   accessToken:
-    expiration: 600000  # 10분
+    expiration: 1800000  # 30분
   refreshToken:
     expiration: 604800000  # 7일
