[refactor] Redis 종속성 수정

--- a/services/queue-manage/build.gradle
+++ b/services/queue-manage/build.gradle
@@ -31,7 +31,9 @@ dependencyManagement {
 dependencies {
 	// Common Module
 	implementation project(':common:core')
-	implementation project(':common:caching')
+	implementation(project(':common:caching')) {
+		exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-data-redis')
+	}
 	implementation project(':common:messaging')
 	implementation project(':common:monitoring')
 
