--- a/common/caching/src/main/resources/application-redis.yml
+++ b/common/caching/src/main/resources/application-redis.yml
@@ -4,9 +4,9 @@ spring:
       cluster:
         max-redirects: 3
         nodes:
-          - host.docker.internal:7001
-          - host.docker.internal:7002
-          - host.docker.internal:7003
-          - host.docker.internal:7004
-          - host.docker.internal:7005
-          - host.docker.internal:7006
+          - ${REDIS_NODE_1}
+          - ${REDIS_NODE_2}
+          - ${REDIS_NODE_3}
+          - ${REDIS_NODE_4}
+          - ${REDIS_NODE_5}
+          - ${REDIS_NODE_6}
