--- a/common/messaging/src/main/resources/application-kafka.yml
+++ b/common/messaging/src/main/resources/application-kafka.yml
@@ -1,6 +1,6 @@
 spring:
   kafka:
-    bootstrap-servers: kafka1:29092,kafka2:29093,kafka3:29094
+    bootstrap-servers: ${KAFKA_BROKER_1},${KAFKA_BROKER_2},${KAFKA_BROKER_3}
     consumer:
       group-id: ${spring.application.name}-group
       properties:
