--- a/common/monitoring/src/main/resources/application-monitoring.yml
+++ b/common/monitoring/src/main/resources/application-monitoring.yml
@@ -11,7 +11,7 @@ management:
 
   zipkin:
     tracing:
-      endpoint: "http://zipkin:9411/api/v2/spans"
+      endpoint: ${ZIPKIN}
   tracing:
     sampling:
       probability: 1.0
