--- a/services/payment/src/main/resources/application.yml
+++ b/services/payment/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: payment
 
   datasource:
-    url: jdbc:postgresql://payment-db:5432/postgres
-    username: postgres
-    password: postgres
+    url: ${PAYMENT_POSTGRES_URL}
+    username: ${PAYMENT_POSTGRES_USERNAME}
+    password: ${PAYMENT_POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   config:
