--- a/services/performance/src/main/resources/application.yml
+++ b/services/performance/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: performance
 
   datasource:
-    url: jdbc:postgresql://performance-db:5432/postgres
-    username: postgres
-    password: postgres
+    url: ${PERFORMANCE_POSTGRES_URL}
+    username: ${PERFORMANCE_POSTGRES_USERNAME}
+    password: ${PERFORMANCE_POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   config:
