--- a/services/user/src/main/resources/application.yml
+++ b/services/user/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: user
 
   datasource:
-    url: jdbc:postgresql://user-db:5432/postgres
-    username: postgres
-    password: postgres
+    url: ${USER_POSTGRES_URL}
+    username: ${USER_POSTGRES_USERNAME}
+    password: ${USER_POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   config:
