[feat #66] 게이트웨이 서킷브레이커 이벤트 로깅 추가

--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -27,6 +27,10 @@ resilience4j:
         slowCallDurationThreshold: 10s
         waitDurationInOpenState: 10s
         permittedNumberOfCallsInHalfOpenState: 3
+        record-exceptions:
+          - java.util.concurrent.TimeoutException
+          - org.springframework.cloud.gateway.support.NotFoundException
+          - io.netty.channel.AbstractChannel$AnnotatedConnectException
     instances:
       authServiceCircuitBreaker:
         baseConfig: default
