[feat #68] 서킷브레이커 그라파나 모니터링 대시보드 설정

--- a/monitoring/grafana/provisioning/dashboards/dashboards.yml
+++ b/monitoring/grafana/provisioning/dashboards/dashboards.yml
@@ -1,7 +1,13 @@
 apiVersion: 1
 
 providers:
-  - name: ticketping-dashboard
+  - name: spring-boot-dashboard
+    folder: TicketPing
+    type: file
+    options:
+      path: /etc/grafana/provisioning/dashboards
+
+  - name: grafana-dashboard
     folder: TicketPing
     type: file
     options:
