[refactor] 회원가입 생일, 성별 필드 삭제

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - REDIS_NODE_5=${REDIS_NODE_5}
       - REDIS_NODE_6=${REDIS_NODE_6}
       - ZIPKIN=${ZIPKIN}
+      - FRONTEND_APP_URL=${FRONTEND_APP_URL}
+      - USER_TOKEN_SECRET_KEY=${USER_TOKEN_SECRET_KEY}
     depends_on:
       auth-server:
         condition: service_started
